--- a/README.Rmd
+++ b/README.Rmd
@@ -1,28 +1,36 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r setup, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # workshop7
 
 <!-- badges: start -->
-
 [![R-CMD-check](https://github.com/jabenninghoff/workshop7/workflows/R-CMD-check/badge.svg)](https://github.com/jabenninghoff/workshop7/actions)
 [![lint](https://github.com/jabenninghoff/workshop7/workflows/lint/badge.svg)](https://github.com/jabenninghoff/workshop7/actions)
 <!-- badges: end -->
 
 ## Overview
 
-**SRA 2021 Workshop 7:** Analysis package for SRA 2021 Workshop 7: Monte
-Carlo simulation and probability bounds analysis in R with hardly any
-data
+**`r packageDescription("workshop7", fields = "Title")`:** `r packageDescription("workshop7", fields = "Description")`
 
 Notebooks:
 
--   Add notebooks here
+* Add notebooks here
 
 ## Installation
 
-You can install the development version of workshop7 from
-[GitHub](https://github.com/) with:
+You can install the development version of workshop7 from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -38,5 +46,5 @@ renv::install("jabenninghoff/workshop7")
 
 ## Development
 
--   Changelog: See “Changelog” or `NEWS.md`.
--   Planned: [TODO](TODO.md)
+- Changelog: See "Changelog" or `NEWS.md`.
+- Planned: [TODO](TODO.md)
