--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,8 @@ knitr::opts_chunk$set(
 
 **`r packageDescription("workshop7", fields = "Title")`:** `r packageDescription("workshop7", fields = "Description")`
 
+Feel free to use and/or fork this project!
+
 ## Notebooks
 
 Notebooks in this package:
