Update notebooks to Bootstrap 5

--- a/analysis/workshop-notes.Rmd
+++ b/analysis/workshop-notes.Rmd
@@ -3,6 +3,8 @@ title: "SRA Workshop 7 Notes"
 date: '2021-12-04'
 output:
   html_notebook:
+    theme:
+      version: 5
     toc: yes
     toc_float:
       collapsed: no
