--- a/analysis/workshop.Rmd
+++ b/analysis/workshop.Rmd
@@ -3,6 +3,8 @@ title: "SRA Workshop 7"
 date: '2021-12-05'
 output:
   html_notebook:
+    theme:
+      version: 5
     toc: yes
     toc_float:
       collapsed: no
