--- a/analysis/workshop.Rmd
+++ b/analysis/workshop.Rmd
@@ -1,10 +1,16 @@
 ---
 title: "SRA Workshop 7"
+author: "John Benninghoff"
 date: '2021-12-05'
+file-modified: '2022-02-06'
+categories: []
+order:
 output:
   html_notebook:
     theme:
       version: 5
+      preset: bootstrap
+    css: assets/extra.css
     toc: yes
     toc_float:
       collapsed: no
