Update YAML front matter

--- a/analysis/workshop-notes.Rmd
+++ b/analysis/workshop-notes.Rmd
@@ -2,7 +2,7 @@
 title: "SRA Workshop 7 Notes"
 author: "John Benninghoff"
 date: '2021-12-04'
-file-modified: '2022-06-21'
+date-modified: '2022-06-21'
 categories: []
 order:
 output:
