--- a/analysis/workshop.Rmd
+++ b/analysis/workshop.Rmd
@@ -2,7 +2,7 @@
 title: "SRA Workshop 7"
 author: "John Benninghoff"
 date: '2021-12-05'
-file-modified: '2022-02-06'
+date-modified: '2022-02-06'
 categories: []
 order:
 output:
